--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "ahooks": "^2.10.9",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-hotkeys-hook": "^3.4.0",
