--- a/package.json
+++ b/package.json
@@ -7,21 +7,27 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "ahooks": "^3.1.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-hotkeys-hook": "^3.4.0",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0"
+    "ahooks": "^3.3.10",
+    "daisyui": "^2.14.3",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-hotkeys-hook": "^3.4.4",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-router": "^5.1.16",
-    "@types/react-router-dom": "^5.1.8",
-    "@vitejs/plugin-react-refresh": "^1.3.1",
-    "typescript": "^4.3.2",
-    "vite": "^2.7.10",
-    "vite-plugin-string": "^1.0.1"
+    "@types/react": "^18.0.8",
+    "@types/react-dom": "^18.0.3",
+    "@types/react-router": "^5.1.18",
+    "@types/react-router-dom": "^5.3.3",
+    "@vitejs/plugin-react": "^1.3.1",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "autoprefixer": "^10.4.6",
+    "postcss": "^8.4.13",
+    "tailwindcss": "^3.0.24",
+    "typescript": "^4.6.4",
+    "vite": "^2.9.6",
+    "vite-plugin-string": "^1.1.2"
   }
 }
