--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "ahooks": "^3.3.10",
-    "daisyui": "^2.14.3",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "ahooks": "^3.7.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hotkeys-hook": "^3.4.4",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "zustand": "^4.0.0-rc.1"
+    "zustand": "^4.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.8",
@@ -25,7 +24,6 @@
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "autoprefixer": "^10.4.6",
     "postcss": "^8.4.13",
-    "tailwindcss": "^3.0.24",
     "typescript": "^4.6.4",
     "vite": "^2.9.6",
     "vite-plugin-string": "^1.1.2"
