--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-hotkeys-hook": "^3.4.4",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
+    "unplugin-obj": "^0.1.2",
     "zustand": "^4.1.1"
   },
   "devDependencies": {
@@ -20,12 +21,11 @@
     "@types/react-dom": "^18.0.3",
     "@types/react-router": "^5.1.18",
     "@types/react-router-dom": "^5.3.3",
-    "@vitejs/plugin-react": "^1.3.1",
-    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "@vitejs/plugin-react": "^2.0.1",
     "autoprefixer": "^10.4.6",
     "postcss": "^8.4.13",
     "typescript": "^4.6.4",
-    "vite": "^2.9.6",
+    "vite": "^3.0.9",
     "vite-plugin-string": "^1.1.2"
   }
 }
