--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postcss": "^8.4.13",
     "typescript": "^4.6.4",
     "vite": "^3.0.9",
-    "vite-plugin-string": "^1.1.2"
+    "vite-plugin-string": "^1.1.2",
+    "vitest": "^0.22.1"
   }
 }
