--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mantine/core": "^5.3.0",
+    "@mantine/hooks": "^5.3.0",
     "ahooks": "^3.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
