--- a/package.json
+++ b/package.json
@@ -7,30 +7,32 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@mantine/core": "^5.3.0",
-    "@mantine/hooks": "^5.3.0",
-    "ahooks": "^3.7.0",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mantine/core": "^6.0.8",
+    "@mantine/hooks": "^6.0.8",
+    "@mantine/notifications": "^6.0.8",
+    "@webgpu/types": "^0.1.30",
+    "ahooks": "^3.7.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hotkeys-hook": "^3.4.4",
-    "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
+    "react-hotkeys-hook": "^4.4.0",
+    "react-router": "^6.10.0",
+    "react-router-dom": "^6.10.0",
     "unplugin-obj": "^0.1.2",
-    "zustand": "^4.1.1"
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
-    "@types/react": "^18.0.8",
-    "@types/react-dom": "^18.0.3",
-    "@types/react-router": "^5.1.18",
+    "@types/react": "^18.0.37",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
-    "@vitejs/plugin-react": "^2.0.1",
-    "autoprefixer": "^10.4.6",
-    "postcss": "^8.4.13",
-    "typescript": "^4.6.4",
-    "vite": "^3.0.9",
+    "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
+    "typescript": "^5.0.4",
+    "vite": "^4.2.2",
     "vite-plugin-string": "^1.1.2",
-    "vitest": "^0.22.1"
+    "vitest": "^0.30.1"
   }
 }
