--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "resolveJsonModule": true,
     "isolatedModules": false,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react-jsx",
+    "typeRoots": [ "./node_modules/@webgpu/types", "./node_modules/@types"]
   },
   "include": ["./src"],
   "files": ["./missing-types.d.ts"]
