--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@mantine/core": "^6.0.8",
-    "@mantine/hooks": "^6.0.8",
-    "@mantine/notifications": "^6.0.8",
+    "@pixi/devtools": "2.0.1",
+    "@pixi/tilemap": "5.0.1",
     "@webgpu/types": "^0.1.30",
     "ahooks": "^3.7.6",
+    "lodash": "^4.17.21",
+    "pixi.js": "8.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hotkeys-hook": "^4.4.0",
@@ -23,16 +22,18 @@
     "zustand": "^4.3.7"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
+    "@tailwindcss/vite": "4.0.0-beta.4",
+    "@types/lodash": "4.17.7",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
-    "@vitejs/plugin-react": "^3.1.0",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.23",
+    "@vitejs/plugin-react": "^4.3.4",
+    "tailwindcss": "4.0.0-beta.4",
     "typescript": "^5.0.4",
-    "vite": "^4.2.2",
-    "vite-plugin-string": "^1.1.2",
-    "vitest": "^0.30.1"
+    "vite": "^6.0.1",
+    "vite-plugin-string": "^1.2.2",
+    "vitest": "^2.1.6"
   }
 }
