--- a/package.json
+++ b/package.json
@@ -7,30 +7,37 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@pixi/devtools": "2.0.1",
+    "@pixi/tilemap": "5.0.1",
+    "@radix-ui/react-slot": "^1.1.1",
     "@webgpu/types": "^0.1.30",
     "ahooks": "^3.7.6",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.469.0",
+    "pixi.js": "8.6.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hotkeys-hook": "^4.4.0",
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "unplugin-obj": "^0.1.2",
-    "zustand": "^4.3.7",
-    "lodash": "^4.17.21",
-    "pixi.js": "8.4.0",
-    "@pixi/tilemap": "5.0.1",
-    "@pixi/devtools": "2.0.1"
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
-    "@tailwindcss/vite": "4.0.0-beta.4",
     "@types/lodash": "4.17.7",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.4",
-    "tailwindcss": "4.0.0-beta.4",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.0.4",
     "vite": "^6.0.1",
     "vite-plugin-string": "^1.2.2",
