--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "lib": ["DOM", "DOM.Iterable", "ESNext", "scripthost"],
     "allowJs": false,
     "skipLibCheck": false,
     "esModuleInterop": false,
@@ -14,7 +14,8 @@
     "isolatedModules": false,
     "noEmit": true,
     "jsx": "react-jsx",
-    "typeRoots": ["./node_modules/@webgpu/types", "./node_modules/@types"],
+    "typeRoots": ["./node_modules/@webgpu/types", "./node_modules/@types", "./node_modules/phaser/types"],
+    "types": ["Phaser", "webgpu"],
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
